tests/ui/async-await/dont-ice-for-type-mismatch-in-closure-in-async.stderr
error[E0308]: mismatched types
  --> $DIR/dont-ice-for-type-mismatch-in-closure-in-async.rs:9:13
   |
LL | /         if true {
LL | |             false
   | |             ^^^^^ expected `()`, found `bool`
LL | |
LL | |         }
   | |_________- expected this to be `()`

error[E0308]: mismatched types
  --> $DIR/dont-ice-for-type-mismatch-in-closure-in-async.rs:12:9
   |
LL |     call(|| -> Option<()> {
   |                ---------- expected `Option<()>` because of return type
...
LL |         true
   |         ^^^^ expected `Option<()>`, found `bool`
   |
   = note: expected enum `Option<()>`
              found type `bool`

error[E0271]: expected `{closure@dont-ice-for-type-mismatch-in-closure-in-async.rs:6:10}` to return `bool`, but it returns `Option<()>`
  --> $DIR/dont-ice-for-type-mismatch-in-closure-in-async.rs:6:16
   |
LL |     call(|| -> Option<()> {
   |     ---- ------^^^^^^^^^^
   |     |    |     |
   |     |    |     expected `bool`, found `Option<()>`
   |     |    this closure
   |     required by a bound introduced by this call
   |
   = note: expected type `bool`
              found enum `Option<()>`
note: required by a bound in `call`
  --> $DIR/dont-ice-for-type-mismatch-in-closure-in-async.rs:3:25
   |
LL | fn call(_: impl Fn() -> bool) {}
   |                         ^^^^ required by this bound in `call`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
